<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.owner.camerasave.MainActivity">

 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/camera_name"
     android:id="@+id/takePictureButton"
     android:onClick="pictureOnClick" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/activity_name"
     android:id="@+id/pictureDetails"
     android:onClick="detailsOnClick"/>

 <EditText

     android:padding="@dimen/et_padding"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/emailET"/>

 <EditText
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="@dimen/et_padding"
     android:id="@+id/passwordET"
     />

 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/createButton"
     android:text="@string/create_user"
     android:onClick="createUserOnClick" />

 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/signIn"
     android:text="@string/sign_in"
     android:onClick="signInOnClick"/>

</LinearLayout>
